--- a/dashboard.html
+++ b/dashboard.html
@@ -27,22 +27,42 @@
   </section>
 
   <div class="update-income">
-    <input type="number" placeholder="Enter Amount">
+    <h1>Update Income</h1>
+    <input class="input" type="number" placeholder="Enter Amount">
+    <input class="input" type="text" placeholder="Enter UserId">
   </div>
   <div class="add-expenses">
-    <input type="text" placeholder="Enter Category">
-    <input type="text" placeholder="Description">
-    <input type="text" placeholder="Enter your id">
-
+    <h1>Add Expenses</h1>
+    <select id="category">
+      <option selected>Select a Category</option>
+      <option>Home & Utilities</option>
+      <option>Insurance & Financial Section</option>
+      <option>Obligations</option>
+      <option>Groceries</option>
+      <option>Personal & Medical checkExpenses</option>
+      <option>Entertainment & Dine Out</option>
+      <option>Transportation Fares</option>
+      <option>Child Care</option>
+  </select>
+    <div id="description">
+      <textarea name="description" id="description" cols="30" rows="3">Enter a description</textarea>
+  </div>
+    <input type="text" placeholder="Enter  user-id">
     <input type="number" placeholder="Enter Amount">
   </div>
+  <div class="Saving">
+    <h1>Saving Goal</h1>
+    <input type="number" placeholder="Enter Amount">
+    <input type="text" placeholder="Enter user-id">
+  </div>
+
+  
+
+       
 
 
-  <div class="balance"></div> 
-  <div class="income"></div> 
-  <div class="expenses"></div> 
-  <div class="saving"></div> 
-  <div class="check-expenses"></div> 
+
+
 
 </body>
 </html>
