--- a/dashboard.html
+++ b/dashboard.html
@@ -26,23 +26,23 @@
     </div>
   </section>
 
-  <div class="update-income">
+  <div class="updateIncome">
     <input type="number" placeholder="Enter Amount">
   </div>
-  <div class="add-expenses">
-    <input type="text" placeholder="Enter Category">
-    <input type="text" placeholder="Description">
-    <input type="text" placeholder="Enter your id">
+  <div class="addExpenses">
+    <input type="text" id="category" placeholder="Enter Category">
+    <input type="text" id="description" placeholder="Description">
+    <input type="text" id="amount" placeholder="Enter your id">
 
     <input type="number" placeholder="Enter Amount">
   </div>
 
 
-  <div class="balance"></div> 
-  <div class="income"></div> 
-  <div class="expenses"></div> 
-  <div class="saving"></div> 
-  <div class="check-expenses"></div> 
+  <div class="checkBalance"></div> 
+  <div class="addIncome"></div> 
+  <div class="addExpenses"></div> 
+  <div class="setSavingGoal"></div> 
+  <div class="checkExpenses"></div> 
 
 </body>
 </html>
