--- a/dashboard.html
+++ b/dashboard.html
@@ -10,8 +10,10 @@
 
   <header class="header">
     <h1 class="text">Track<span>Ex</span></h1>
+
+
     <div class="header-button">
-      <button class="log-out">
+      <button class="log-out" id="logout">
         <img src="/assest/icons8-power-button-48.png" alt="">
         Log-Out </button>
     </div>
@@ -20,30 +22,39 @@
   <div class="workspace">
     <div class="dashboard">
       <div class="user-services">
-          <button>Add Income</button>
-          <button > Check Balance </button>
-          <button>Update Income</button>
-          <button>Add Expenses</button>
-          <button>Saving Goal</button>
-          <button>Check Expenses</button>
+          <button id="add-income-button">Add Income</button>
+          <button id="check-balance-button" > Check Balance </button>
+          <button id="update-income-button">Update Income</button>
+          <button id="add-expenses-button">Add Expenses</button>
+          <button id="saving-goal-button">Saving Goal</button>
+          <button id="check-expenses-button">Check Expenses</button>
              
       </div>
     </div>
 
+    <div class="update-income" id="check-balance">
 
-    <div class="update-income">
+    </div>
+
+    <div class="update-income" id="check-expenses">
+
+    </div>
+
+
+    <div class="update-income" id="add-income">
       <h1>Add Income</h1>
-      <input class="input" type="number" id="addIncome" placeholder="Enter Amount">
-      <button class="add-income-button" >Add Income</button>
+      <input class="input" type="number" id="addIncomeAmount" placeholder="Enter Amount">
+      <button class="add-expenses-button" id="add-income-button-new">Add Income</button>
+    
     </div>
   
-    <div class="update-income">
+    <div class="update-income" id="update-income-part">
       <h1>Update Income</h1>
-      <input class="input" type="number" id="updateIncome" placeholder="Enter Amount">
-      <button class="update-income-button" >Update Income</button>
+      <input class="input" type="number" id="updateIncomeAmount" placeholder="Enter Amount">
+      <button class="update-income-button" id="update-income-button-new" >Update Income</button>
     </div>
   
-    <div class="addExpenses" id="addExpenses">
+    <div class="add-expenses" id="addExpenses">
       <h1>Add Expenses</h1>
       <select id="category" class="input">
         <option selected>Select a Category</option>
@@ -58,13 +69,13 @@
       </select>
   
       <div id="description">
-        <textarea name="description" id="description" cols="30" rows="3" placeholder="Enter a description"></textarea >
+        <textarea name="description" id="description" cols="40" rows="5" placeholder="Enter a description"></textarea >
       </div>
       <input type="number" placeholder="Enter Amount" class="input" id="amount">
-      <button class="add-expenses-button" id="add-expenses-button">Add Expenses</button>
+      <button class="add-expenses-button" id="add-expenses-button-new">Add Expenses</button>
     </div>
   
-    <div class="Saving">
+    <div class="saving" id="saving">
       <h1>Saving Goal</h1>
       <input class="input" type="number" id="setSavingGoal" placeholder="Enter Amount">
       <button type="text" class="add-expenses-button" id="saving-goal">Add Savings</button>
@@ -72,6 +83,6 @@
   
   </div>
 
-  
+  <script src="./dashboard.js"></script>
 </body>
 </html>
