--- a/dashboard.html
+++ b/dashboard.html
@@ -33,10 +33,15 @@
     </div>
 
     <div class="update-income" id="check-balance">
+      <h1 id="balance"></h1>
+      <div><img class="incorrect" src="/assest/icons8-cancel-49.png" alt=""></div>
 
+      <div><img class="correct" src="/assest/icons8-check-48.png" alt=""></div>
     </div>
 
+
     <div class="update-income" id="check-expenses">
+
 
     </div>
 
