--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,8 @@
 
     <div class="update-income" id="add-income">
       <h1>Add Income</h1>
-      <input class="input" type="number" id="addIncomeAmount" placeholder="Enter Amount">
+      <div id="add-income-text"></div>
+      <input class="input" type="number" id="addIncomeAmount" placeholder="Enter Amount" required>
       <button class="add-expenses-button" id="add-income-button-new">Add Income</button>
     
     </div>
@@ -77,6 +78,7 @@
   
     <div class="saving" id="saving">
       <h1>Saving Goal</h1>
+      <div id="saving-goal-text"></div>
       <input class="input" type="number" id="setSavingGoal" placeholder="Enter Amount">
       <button type="text" class="add-expenses-button" id="saving-goal">Add Savings</button>
     </div>
