--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,12 @@
 
 
     <div class="update-income" id="check-expenses">
-
+      <h1 id="expense-category"></h1>
+      <h3 id="expense-description"></h3>
+      <h3 id="expense-price"></h3>
+      <h4 id="date-created"></h4>
+      
+      <button id="next-button" class="update-income-button">Next</button>
 
     </div>
 
