working on check balance

--- a/dashboard.html
+++ b/dashboard.html
@@ -34,9 +34,11 @@
 
     <div class="update-income" id="check-balance">
       <h1 id="balance"></h1>
-      <div><img class="incorrect" src="/assest/icons8-cancel-49.png" alt=""></div>
-
-      <div><img class="correct" src="/assest/icons8-check-48.png" alt=""></div>
+      <img class="correct" src="/assest/icons8-check-48.png" alt="">
+      <h2>Your balance is <span style='font-size:100px;'>&#8358;
+        <span id="check-balance-text"></span>
+      </span></h2>
+      
     </div>
 
 
