--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
     <div class="update-income" id="check-balance">
       <h1 id="balance"></h1>
       <img class="correct" src="/assest/icons8-check-48.png" alt="">
-      <h2>Your balance is <span style='font-size:100px;'>&#8358;
+      <h2>Your balance is <br> <span class="balance-amount" style='font-size:100px;'>&#8358;
         <span id="check-balance-text"></span>
       </span></h2>
       
