Added to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
     <div class="update-income" id="check-expenses">
       <h1 id="expense-category"></h1>
       <h3 id="expense-description"></h3>
-      <h3 id="expense-price"></h3>
+      <h1 id="expense-price"></h1>
       <h4 id="date-created"></h4>
       
       <button id="next-button" class="update-income-button">Next</button>
@@ -85,7 +85,7 @@
       </select>
   
       <div id="description">
-        <textarea name="description" id="description" cols="40" rows="5" placeholder="Enter a description"></textarea >
+        <textarea name="description"class id="description-text" cols="40" rows="5" placeholder="Enter a description"></textarea >
       </div>
       <input type="number" placeholder="Enter Amount" class="input" id="amount">
       <button class="add-expenses-button" id="add-expenses-button-new">Add Expenses</button>
